--- a/css/contact.css
+++ b/css/contact.css
@@ -22,6 +22,49 @@ body {
     font-family: "Poppins", sans-serif;
     
 }
+ @media (max-width:942px)
+{
+    nav{
+        border: 1px solid red;
+        display: none;
+     width: 20vh;
+    }
+    nav  .buttons  {
+        margin-right: 20vh;      
+    } 
+    nav .menu{
+        width: 40vh;
+    }
+    .contact-info
+    {
+    width: 50vh;
+    margin-right: 20vh;      
+    }
+    .section {
+        margin-right: 20vh;
+        border: 1px solid #000;     
+    }
+    .section .name input{
+        width: 20vh;
+        margin-right: 20vh;
+    }
+    .section .name-2 input{
+        width: 20vh;
+        margin-right: 20vh;     
+    }
+    .section .name-3 input{
+        width: 20vh;
+        margin-right: 20vh;
+    }
+    .section .name-4 input{
+        width: 20vh;
+        margin-right: 20vh;     
+    }
+      .section .section-2 .name-5 button{
+        width: 20vh;
+        margin-right: 20vh;      
+    }
+}
 
 
 nav.active {
