--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,70 @@ html{
 body {
     background-color: var(--color-white);
     font-family: "Poppins", sans-serif;
+    
 
 }
+
+
+
+@media (max-width:992px)
+{
+    nav .buttons {
+        
+        margin-right: 15vh; 
+    }
+    .header .baslik h1{
+        margin-left: 25vh;
+    }
+    .header .baslik p{
+        margin-top: 3vh;
+        margin-left: 25vh;
+    }
+    .tel1{
+        margin-left: 25vh;
+    }
+    .social{
+        margin-left: 25vh;
+        
+    }
+    .about h1{
+        
+         margin-left: 25vh;
+    }
+    .phones .phone-img{
+        margin-left: 20vh;       
+    }
+   
+ 
+    #musterilerimiz .hero h1{
+        margin-left: 25vh;
+    }
+    #musterilerimiz .hero p{
+        margin-left: 25vh;
+    }
+
+    #musterilerimiz .kutu{
+       margin-left: 30vh;   
+    }
+     
+    .comment .comments {
+        width: 100%;
+        display: block;
+        
+        margin-left: 25vh;
+    }
+    .comment .comments .comment-1{    
+       margin-top: 5vh;
+    }
+    footer {
+        width: 110vh;
+        border: 1px solid #000;
+    }
+
+
+
+}
+ 
 
 ::-webkit-scrollbar{
     width: 15px;
@@ -226,6 +288,20 @@ nav .logo {
 }
 
 .phone-1 {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 90px;
+}
+.phone-2 {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 90px;
+}
+.phone-3 {
     display: flex;
     width: 100%;
     justify-content: space-around;
